--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nagios-plugins-ceph (1.5.3-1) unstable; urgency=medium
+
+  * Typo fix
+
+ -- Martin Wittwer <mawit@pcmawit-new>  Tue, 13 Sep 2016 12:57:30 +0200
+
 nagios-plugins-ceph (1.5.2-1) unstable; urgency=medium
 
   * Dependencies edited
